--- a/templates/_fragments/search_popup.html
+++ b/templates/_fragments/search_popup.html
@@ -2,39 +2,45 @@
 <div class="search-popup">
     <div class="search-popup-container">
 
-        <form role="search" method="get" class="search-form" action="">
-            <input type="search" id="search-form" class="search-field" placeholder="Type and press enter" value=""
-                name="s" />
-            <button type="submit" class="search-submit"><svg class="search">
-                    <use xlink:href="#search"></use>
-                </svg></button>
+        <form role="search" method="get" class="search-form" action="/catalog">
+            <div style="position: relative;">
+                <input type="search" id="search-form" class="search-field" placeholder="Type and press enter" name="s"
+                    autocomplete="off" />
+                <button type="submit" class="search-submit">
+                    <svg class="search">
+                        <use xlink:href="#search"></use>
+                    </svg>
+                </button>
+                <div id="search-suggestions" style="position: absolute; z-index: 1000; width: 100%;"></div>
+            </div>
         </form>
 
         <h5 class="cat-list-title">Browse Categories</h5>
 
         <ul class="cat-list">
             <li class="cat-list-item">
-                <a href="#" title="Mobile Phones">Mobile Phones</a>
+                <a href="/catalog?category=2" title="Smartphones">Smartphones</a>
             </li>
             <li class="cat-list-item">
-                <a href="#" title="Smart Watches">Smart Watches</a>
+                <a href="/catalog?category=3" title="Smart Watches">Smart Watches</a>
             </li>
             <li class="cat-list-item">
-                <a href="#" title="Headphones">Headphones</a>
+                <a href="/catalog?category=5" title="Headphones">Headphones</a>
             </li>
             <li class="cat-list-item">
-                <a href="#" title="Accessories">Accessories</a>
+                <a href="/catalog?category=6" title="Accessories">Accessories</a>
             </li>
             <li class="cat-list-item">
-                <a href="#" title="Monitors">Monitors</a>
+                <a href="/catalog?category=4" title="Cameras">Cameras</a>
             </li>
             <li class="cat-list-item">
-                <a href="#" title="Speakers">Speakers</a>
+                <a href="/catalog?category=1" title="Laptops">Laptops</a>
             </li>
             <li class="cat-list-item">
-                <a href="#" title="Memory Cards">Memory Cards</a>
+                <a href="/catalog?category=7" title="Memory Cards">Memory Cards</a>
             </li>
         </ul>
 
     </div>
 </div>
+<script src="{% static 'js/search_autocomplete.js' %}"></script>
