--- a/templates/accounts/signout.html
+++ b/templates/accounts/signout.html
@@ -3,19 +3,15 @@
 {% block content %}
     <div class="content-panel">
         <div class="section">
-		<!-- container -->
 			<div class="container">
-				<!-- row -->
 				<div class="row">
 					<!-- ------------------------------------------------------------ -->
                     <h3 style="color:darkcyan; text-align: center; font-style: italic;">
-                        {{ title }}
+                        Ви успішно вийшли із системи
                     </h3>
 					<!-- ------------------------------------------------------------ -->
 				</div>
-				<!-- /row -->
 			</div>
-			<!-- /container -->
 		</div>
     </div>
 {% endblock %}
