--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -6,9 +6,7 @@
     </div>
     <div class="content-panel">
         <div class="section">
-		<!-- container -->
 			<div class="container">
-				<!-- row -->
 				<div class="row">
 					<!-- ------------------------------------------------------------------------------- -->
                     <form id="form1" action="/accounts/signup" method="post" onsubmit="return true">
@@ -40,14 +38,17 @@
                     </form>
 					<!-- ------------------------------------------------------------------------------- -->
 				</div>
-				<!-- /row -->
 			</div>
-			<!-- /container -->
 		</div>
     </div>
     <div style="padding-top: 90px;">
     </div>
     <style>
+        .error {
+            color: red;
+            font-style: italic;
+            font-size: 0.9em;
+        }
         label {
             color: teal;
             margin-bottom: 2px;
