--- a/templates/_fragments/header.html
+++ b/templates/_fragments/header.html
@@ -2,7 +2,7 @@
 <header id="header" class="site-header header-scrolled position-fixed text-black bg-light">
     <nav id="header-nav" class="navbar navbar-expand-lg px-3 mb-3">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/about">
                 <img src="{% static 'images/main-logo.png' %}" class="logo">
             </a>
             <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas"
@@ -14,7 +14,7 @@
             </button>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="bdNavbar" aria-labelledby="bdNavbarOffcanvasLabel">
                 <div class="offcanvas-header px-4 pb-0">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="/about">
                         <img src="{% static 'images/main-logo.png' %}" class="logo">
                     </a>
                     <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas"
@@ -85,7 +85,7 @@
                                         </div>
                                         <div class="cart-btns d-flex justify-content-between">
                                             <a href="/orders" class="btn btn-sm btn-outline-primary">View</a>
-                                            <a href="#" class="btn btn-sm btn-primary">Checkout <i class="fa fa-arrow-circle-right"></i></a>
+                                            <!-- <a href="/orders/bill/123" class="btn btn-sm btn-primary">Checkout <i class="fa fa-arrow-circle-right"></i></a> -->
                                         </div>
                                     </ul>
                                 </ul>
