Added favorites functionality, filters, password change, help pages, and improved template structure.

--- a/templates/_fragments/latest_blog.html
+++ b/templates/_fragments/latest_blog.html
@@ -5,7 +5,7 @@
             <div class="display-header d-flex justify-content-between pb-3">
                 <h2 class="display-7 text-dark text-uppercase">Latest Posts</h2>
                 <div class="btn-right">
-                    <a href="blog.html" class="btn btn-medium btn-normal text-uppercase">Read Blog</a>
+                    <a href="/blog" class="btn btn-medium btn-normal text-uppercase">Read Blog</a>
                 </div>
             </div>
             <div class="post-grid d-flex flex-wrap justify-content-between">
@@ -21,7 +21,7 @@
                             <span class="meta-category">- Gadgets</span>
                         </div>
                         <h3 class="card-title">
-                            <a href="#">Get some cool gadgets in 2023</a>
+                            <a href="/catalog/shop/12/">Get some cool gadgets in 2023</a>
                         </h3>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                             <span class="meta-category">- Technology</span>
                         </div>
                         <h3 class="card-title">
-                            <a href="#">Technology Hack You Won't Get</a>
+                            <a href="/catalog/shop/9/">Technology Hack You Won't Get</a>
                         </h3>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                             <span class="meta-category">- Camera</span>
                         </div>
                         <h3 class="card-title">
-                            <a href="#">Top 10 Small Camera In The World</a>
+                            <a href="/catalog/shop/10/">Top 10 Small Camera In The World</a>
                         </h3>
                     </div>
                 </div>
