--- a/templates/_fragments/billboard.html
+++ b/templates/_fragments/billboard.html
@@ -8,8 +8,8 @@
                         <div class="col-md-6">
                             <div class="banner-content">
                                 <h1 class="display-2 text-uppercase text-dark pb-5">Your Products Are Great.</h1>
-                                <a href="/catalog?category=3" class="btn btn-medium btn-dark text-uppercase btn-rounded-none">Shop
-                                    Product</a>
+                                <!-- <a href="/catalog?category=3" class="btn btn-medium btn-dark text-uppercase btn-rounded-none">Shop
+                                    Product</a> -->
                             </div>
                         </div>
                         <div class="col-md-5">
@@ -26,8 +26,8 @@
                         <div class="col-md-6">
                             <div class="banner-content">
                                 <h1 class="display-2 text-uppercase text-dark pb-5">Technology Hack You Won't Get</h1>
-                                <a href="shop.html" class="btn btn-medium btn-dark text-uppercase btn-rounded-none">Shop
-                                    Product</a>
+                                <!-- <a href="shop.html" class="btn btn-medium btn-dark text-uppercase btn-rounded-none">Shop
+                                    Product</a> -->
                             </div>
                         </div>
                         <div class="col-md-5">
