--- a/templates/_fragments/footer.html
+++ b/templates/_fragments/footer.html
@@ -12,35 +12,35 @@
                             <div class="social-links">
                                 <ul class="d-flex list-unstyled">
                                     <li>
-                                        <a href="#">
+                                        <a href="/facebook">
                                             <svg class="facebook">
                                                 <use xlink:href="#facebook" />
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="/instagram">
                                             <svg class="instagram">
                                                 <use xlink:href="#instagram" />
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="/twitter">
                                             <svg class="twitter">
                                                 <use xlink:href="#twitter" />
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="/linkedin">
                                             <svg class="linkedin">
                                                 <use xlink:href="#linkedin" />
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="/youtube">
                                             <svg class="youtube">
                                                 <use xlink:href="#youtube" />
                                             </svg>
@@ -77,19 +77,19 @@
                             <h5 class="widget-title pb-2">Help & Info Help</h5>
                             <ul class="menu-list list-unstyled">
                                 <li class="menu-item pb-2">
-                                    <a href="#">Track Your Order</a>
+                                    <a href="/track">Track Your Order</a>
                                 </li>
                                 <li class="menu-item pb-2">
-                                    <a href="#">Returns Policies</a>
+                                    <a href="/returns">Returns Policies</a>
                                 </li>
                                 <li class="menu-item pb-2">
-                                    <a href="#">Shipping + Delivery</a>
+                                    <a href="/shipping">Shipping + Delivery</a>
                                 </li>
                                 <li class="menu-item pb-2">
                                     <a href="contacts">Contact Us</a>
                                 </li>
                                 <li class="menu-item pb-2">
-                                    <a href="#">Faqs</a>
+                                    <a href="/faqs">Faqs</a>
                                 </li>
                             </ul>
                         </div>
@@ -97,9 +97,9 @@
                     <div class="col-lg-3 col-sm-6 pb-3">
                         <div class="footer-menu contact-item">
                             <h5 class="widget-title text-uppercase pb-2">Contact Us</h5>
-                            <p>Do you have any queries or suggestions? <a href="mailto:">yourinfo@gmail.com</a>
+                            <p>Do you have any queries or suggestions? <a>yourinfo@gmail.com</a>
                             </p>
-                            <p>If you need support? Just give us a call. <a href="">+55 111 222 333 44</a>
+                            <p>If you need support? Just give us a call. <a>+55 111 222 333 44</a>
                             </p>
                         </div>
                     </div>
