--- a/templates/_fragments/header.html
+++ b/templates/_fragments/header.html
@@ -58,14 +58,17 @@
                                 {% endif %}
                             </span>
                             {% if not user.is_authenticated %}
-                                <a href="/accounts/signin">Вхід</a>
-                                <a href="/accounts/signup">Реєстрація</a>
+                                <a href="/accounts/signin">Sign In</a>
+                                <a href="/accounts/signup">Sign Up</a>
                             {% else %}
-                                <a href="/accounts/signout">Вихід</a>
-                                <a href="/accounts/profile">Профіль</a>
+                                <a href="/accounts/signout">Sign Out</a>
+                                <a href="/accounts/profile">Profile</a>
                             {% endif %}
                             <input type="hidden" id="user-id" value="{{ user.id }}"> 
                         </div>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == '/accounts/favorites' %} active{% endif %}" href="/accounts/favorites">Favorites</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <div class="user-items ps-5">
                                 <ul class="d-flex justify-content-end list-unstyled">
