--- a/templates/_fragments/mobile-products.html
+++ b/templates/_fragments/mobile-products.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="display-header d-flex justify-content-between pb-3">
-                <h2 class="display-7 text-dark text-uppercase">Mobile Products</h2>
+                <h2 class="display-7 text-dark text-uppercase">Smartphones</h2>
                 <div class="btn-right">
                     <a href="/catalog?category=2" class="btn btn-medium btn-normal text-uppercase">Go to Shop</a>
                 </div>
@@ -26,7 +26,7 @@
                             </div>
                             <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
                                 <h3 class="card-title text-uppercase">
-                                    <a href="#">{{ product.name }}</a>
+                                    <a href="/catalog/shop/{{ product.id }}/">{{ product.name }}</a>
                                 </h3>
                                 <span class="item-price text-primary">${{ product.price }}0 </span>
                             </div>
