--- a/templates/_fragments/smart-watches.html
+++ b/templates/_fragments/smart-watches.html
@@ -25,7 +25,7 @@
                             </div>
                             <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
                                 <h3 class="card-title text-uppercase">
-                                    <a href="#">{{ product.name }}</a>
+                                    <a href="/catalog/shop/{{ product.id }}/">{{ product.name }}</a>
                                 </h3>
                                 <span class="item-price text-primary">${{ product.price }}0 </span>
                             </div>
