--- a/templates/_fragments/instagram.html
+++ b/templates/_fragments/instagram.html
@@ -7,7 +7,7 @@
           </div>
           <div class="d-flex flex-wrap">
             <figure class="instagram-item pe-2">
-              <a href="#" class="image-link position-relative">
+              <a href="/instagram" class="image-link position-relative">
                 <img src="{% static 'images/insta-item1.jpg' %}" alt="instagram" class="insta-image">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
@@ -17,7 +17,7 @@
               </a>
             </figure>
             <figure class="instagram-item pe-2">
-              <a href="#" class="image-link position-relative">
+              <a href="/instagram" class="image-link position-relative">
                 <img src="{% static 'images/insta-item2.jpg' %}" alt="instagram" class="insta-image">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
@@ -27,7 +27,7 @@
               </a>
             </figure>
             <figure class="instagram-item pe-2">
-              <a href="#" class="image-link position-relative">
+              <a href="/instagram" class="image-link position-relative">
                 <img src="{% static 'images/insta-item3.jpg' %}" alt="instagram" class="insta-image">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
@@ -37,7 +37,7 @@
               </a>
             </figure>
             <figure class="instagram-item pe-2">
-              <a href="#" class="image-link position-relative">
+              <a href="/instagram" class="image-link position-relative">
                 <img src="{% static 'images/insta-item4.jpg' %}" alt="instagram" class="insta-image">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
@@ -47,7 +47,7 @@
               </a>
             </figure>
             <figure class="instagram-item pe-2">
-              <a href="#" class="image-link position-relative">
+              <a href="/instagram" class="image-link position-relative">
                 <img src="{% static 'images/insta-item5.jpg' %}" alt="instagram" class="insta-image">
                 <div class="icon-overlay position-absolute d-flex justify-content-center">
                   <svg class="instagram">
